--- a/module1/#2.BienVaKieuDuLieu/BaiTap/BienVaKieuDuLieuToanTu/bai.1/bai.1.html
+++ b/module1/#2.BienVaKieuDuLieu/BaiTap/BienVaKieuDuLieuToanTu/bai.1/bai.1.html
@@ -5,6 +5,15 @@
     <title></title>
 </head>
 <body>
-
+    <script>
+        let ly = parseInt(prompt("nhập điểm môn lý: "));
+        let hoa = parseInt(prompt("nhập điểm môn hóa: "));
+        let sinh = parseInt(prompt("nhập điểm môn sinh: "));
+        let tong = ly + hoa + sinh;
+        let trungBinh = tong/3;
+        document.write("tổng điểm: " + tong);
+        document.write("</br>");
+        document.write("trung bình điểm: " + trungBinh);
+    </script>
 </body>
 </html>
