--- a/module1/#2.BienVaKieuDuLieu/BaiTap/BienVaKieuDuLieuToanTu/bai.4/bai.4.html
+++ b/module1/#2.BienVaKieuDuLieu/BaiTap/BienVaKieuDuLieuToanTu/bai.4/bai.4.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let pi = 3.14;
+    const pi = 3.14;
     let r = parseInt(prompt("nhập bán kính hình tròn: "));
     let C = pi*r*2;
     alert("chu vi hình tròn là: " + C);
