--- a/module1/#2.BienVaKieuDuLieu/BaiTap/BienVaKieuDuLieuToanTu/bai.3/bai.3.html
+++ b/module1/#2.BienVaKieuDuLieu/BaiTap/BienVaKieuDuLieuToanTu/bai.3/bai.3.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <script>
-        let pi = 3.14;
+        const pi = 3.14;
         let r = parseInt(prompt("nhập bán kính hình tròn: "));
         let A = pi*r*r;
         alert("diện tích hình tròn là: " + A);
