--- a/module1/#2.BienVaKieuDuLieu/BaiTap/UngDungMayTinh/YeuCauMoRong/MotHam.html
+++ b/module1/#2.BienVaKieuDuLieu/BaiTap/UngDungMayTinh/YeuCauMoRong/MotHam.html
@@ -31,14 +31,13 @@
         if(a==add){
             let a1 = input1 + input2;
             result = "Result: " + a1;
-        }
-        if(a==sub){
+        }else if(a==sub){
             let a1 = input1 - input2;
             result = "Result: " + a1;
-        }if(a==mul){
+        }else if(a==mul){
             let a1 = input1 * input2;
             result = "Result: " + a1;
-        }if(a==divi){
+        }else if(a==divi){
             let a1 = input1 / input2;
             result = "Result: " + a1;
         }
