--- a/module1/#2.BienVaKieuDuLieu/BaiTap/UngDungChuyenDoiTienTe/UngDungChuyenDoTienTe.html
+++ b/module1/#2.BienVaKieuDuLieu/BaiTap/UngDungChuyenDoiTienTe/UngDungChuyenDoTienTe.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <form>
-        <p>Amount:</p>
+        Amount:
         <input type="number" id="input1" value="0">
-        <p> From Currency:</p>
+        From Currency:
         <select id="fromCurrency">
             <option value="23000">VietNam</option>
             <option value="1">USD</option>
         </select>
-        <p>To Currency:<p/>
+        To Currency:
         <select id="toCurrency">
             <option value="23000">VietNam</option>
             <option value="1">USD</option>
