--- a/module1/#2.BienVaKieuDuLieu/BaiTap/UngDungChuyenDoiTienTe/UngDungChuyenDoTienTe.html
+++ b/module1/#2.BienVaKieuDuLieu/BaiTap/UngDungChuyenDoiTienTe/UngDungChuyenDoTienTe.html
@@ -6,21 +6,21 @@
 
 </head>
 <body>
-    <form>
-        Amount:
-        <input type="number" id="input1" value="0">
-        From Currency:
+    <form style="text-align: center;">
+        <label>Amount:</label>
+        <input type="number" id="input1" >
+        <label>From Currency:</label>
         <select id="fromCurrency">
             <option value="23000">VietNam</option>
             <option value="1">USD</option>
         </select>
-        To Currency:
+        <label>To Currency:</label>
         <select id="toCurrency">
             <option value="23000">VietNam</option>
             <option value="1">USD</option>
         </select>
         <input type="button" onclick="showresult()" value="convert" style="background: rebeccapurple; color: aliceblue"/>
-        <p id="ketqua">result: </p>
+        <p id="ketqua" style="color: blue">result: </p>
     </form>
     <script src="javascript.js"></script>
 </body>
