--- a/module1/#2.BienVaKieuDuLieu/BaiTap/UngDungMayTinh/YeuCauMoRong/SwitchCase.html
+++ b/module1/#2.BienVaKieuDuLieu/BaiTap/UngDungMayTinh/YeuCauMoRong/SwitchCase.html
@@ -6,46 +6,43 @@
 </head>
 <body>
 <form>
-    <input type="number" id="input1">
-    <input type="number" id="input2">
+    <input type="number" id="input1"/>
+    <input type="number" id="input2"/>
     <br>
     <br>
-    <input type="button" onclick="ClickMe(this);" value="addition(+)" id="add">
-    <input type="button" onclick="ClickMe(this);" value="subtraction(-)" id="sub">
-    <input type="button" onclick="ClickMe(this);" value="multiplication(x)" id="mul">
-    <input type="button" onclick="ClickMe(this);" value="division(/)" id="divi">
+    <input type="button" onclick="ClickMe(this);" value="addition(+)" id="add" />
+    <input type="button" onclick="ClickMe(this);" value="subtraction(-)" id="sub" />
+    <input type="button" onclick="ClickMe(this);" value="multiplication(x)" id="mul" />
+    <input type="button" onclick="ClickMe(this);" value="division(/)" id="div"/>
     <p id="result">Result: </p>
 </form>
 <script>
     let input1 ;
     let input2 ;
-    let result ;
+    let result = document.getElementById("result");
+    let total;
     let add = document.getElementById("add");
     let sub = document.getElementById("sub");
     let mul = document.getElementById("mul");
-    let divi = document.getElementById("divi");
+    let div = document.getElementById("div");
     function ClickMe(a) {
         input1 = parseInt(document.getElementById("input1").value);
         input2 = parseInt(document.getElementById("input2").value);
         switch (a){
             case add:
-                let a1 = input1 + input2;
-                result = "Result: " + a1;
+                total = "Result Addition : " + (input1 + input2);
                 break;
             case sub:
-                let b1 = input1 - input2;
-                result = "Result: " + b1;
+                total = "Result subtraction : " + (input1 - input2);
                 break;
             case mul:
-                let c1 = input1 * input2;
-                result = "Result: " + c1;
+                total = "Result multiplication : " + (input1 * input2);
                 break;
-            case divi:
-                let d1 = input1 / input2;
-                result = "Result: " + d1;
+            case div:
+                total = "Result division : " + (input1 / input2);
                 break;
         }
-        document.getElementById("result").innerText = result;
+        result.innerText = total;
     }
 </script>
 </body>
