--- a/module1/#2.BienVaKieuDuLieu/BaiTap/UngDungMayTinh/index.html
+++ b/module1/#2.BienVaKieuDuLieu/BaiTap/UngDungMayTinh/index.html
@@ -10,43 +10,40 @@
         <input type="number" id="input2">
         <br>
         <br>
-        <input type="button" onclick="Addition();" value="addition(+)">
-        <input type="button" onclick="Subtraction();" value="subtraction(-)" >
-        <input type="button" onclick="Multiplication();" value="multiplication(x)" >
-        <input type="button" onclick="Division();" value="division(/)">
+        <input type="button" onclick="Addition();" value="addition(+)"/>
+        <input type="button" onclick="Subtraction();" value="subtraction(-)"/>
+        <input type="button" onclick="Multiplication();" value="multiplication(x)"/>
+        <input type="button" onclick="Division();" value="division(/)"/>
         <p id="result">Result: </p>
     </form>
     <script>
-        let input1 ;
-        let input2 ;
-        let result ;
+        let input1;
+        let input2;
+        let total;
+        let result = document.getElementById("result");
         function Addition(){
             input1 = parseInt(document.getElementById("input1").value);
             input2 = parseInt(document.getElementById("input2").value);
-            let a = input1 + input2;
-             result = "Result: " + a;
-            document.getElementById("result").innerText = result ;
+            total = "Result Addition : " + (input1 + input2);
+            result.innerText = total;
         }
         function Subtraction(){
             input1 = parseInt(document.getElementById("input1").value);
             input2 = parseInt(document.getElementById("input2").value);
-            let b = input1 - input2;
-            result = "Result: " + b;
-            document.getElementById("result").innerText = result ;
+            total = "Result subtraction : " + (input1 - input2);
+            result.innerText = total;
         }
         function Multiplication(){
             input1 = parseInt(document.getElementById("input1").value);
             input2 = parseInt(document.getElementById("input2").value);
-            let c = input1 * input2;
-            result = "Result: " + c;
-            document.getElementById("result").innerText = result ;
+            total = "Result multiplication : " + (input1 * input2);
+            result.innerText = total;
         }
         function Division(){
             input1 = parseInt(document.getElementById("input1").value);
             input2 = parseInt(document.getElementById("input2").value);
-            let d = input1 / input2;
-            result = "Result: " + d;
-            document.getElementById("result").innerText = result ;
+            total = "Result division : " + (input1 / input2);
+            result.innerText = total;
         }
     </script>
 </body>
