--- a/module1/#2.BienVaKieuDuLieu/BaiTap/UngDungMayTinh/index.html
+++ b/module1/#2.BienVaKieuDuLieu/BaiTap/UngDungMayTinh/index.html
@@ -2,49 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ứng dụng máy tính</title>
+    <title>Title</title>
 </head>
 <body>
-    <form>
-        <input type="number" id="input1">
-        <input type="number" id="input2">
-        <br>
-        <br>
-        <input type="button" onclick="Addition();" value="addition(+)"/>
-        <input type="button" onclick="Subtraction();" value="subtraction(-)"/>
-        <input type="button" onclick="Multiplication();" value="multiplication(x)"/>
-        <input type="button" onclick="Division();" value="division(/)"/>
-        <p id="result">Result: </p>
-    </form>
-    <script>
-        let input1;
-        let input2;
-        let total;
-        let result = document.getElementById("result");
-        function Addition(){
-            input1 = parseInt(document.getElementById("input1").value);
-            input2 = parseInt(document.getElementById("input2").value);
-            total = "Result Addition : " + (input1 + input2);
-            result.innerText = total;
-        }
-        function Subtraction(){
-            input1 = parseInt(document.getElementById("input1").value);
-            input2 = parseInt(document.getElementById("input2").value);
-            total = "Result subtraction : " + (input1 - input2);
-            result.innerText = total;
-        }
-        function Multiplication(){
-            input1 = parseInt(document.getElementById("input1").value);
-            input2 = parseInt(document.getElementById("input2").value);
-            total = "Result multiplication : " + (input1 * input2);
-            result.innerText = total;
-        }
-        function Division(){
-            input1 = parseInt(document.getElementById("input1").value);
-            input2 = parseInt(document.getElementById("input2").value);
-            total = "Result division : " + (input1 / input2);
-            result.innerText = total;
-        }
-    </script>
+<form>
+    <input type="number" id="input1"/>
+    <input type="number" id="input2"/>
+    <br>
+    <br>
+    <button onclick="ClickMe(this);" value="+">addition(+)</button>
+    <button onclick="ClickMe(this);" value="-">subtraction(-)</button>
+    <button onclick="ClickMe(this);" value="-">multiplication(x)</button>
+    <button onclick="ClickMe(this);" value="-">division(/)</button>
+    <p id="result">Result: </p>
+</form>
+<script>
+    let number1 = document.getElementById("input1") ;
+    let number2 = document.getElementById("input2") ;
+    let result = document.getElementById("result") ;
+    function ClickMe(opt) {
+        result.innerText = "result: " + eval(number1.value  + opt.value + number2.value )
+    }
+</script>
 </body>
 </html>
