--- a/module1/#CaseStudy/yeuCau5/index.html
+++ b/module1/#CaseStudy/yeuCau5/index.html
@@ -9,7 +9,7 @@
     let arrListCustomer=[];
     function displayMainMenu() {
         let choose = parseInt(prompt("1.add name customer"+"\n"+"2.display information customer"+
-        "\n"+"3.edit infomation customer"+"\n"+ "4.deleta customer"+"\n"+"5.exit"));
+        "\n"+"3.edit infomation customer"+"\n"+ "4.delete customer"+"\n"+"5.exit"));
         switch (choose) {
             case 1:{
                 addNewCustomer();
